deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-playground-service
spec:
  selector:
    app: next-playground
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
